--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@
   --input-background: rgba(251, 249, 249, 0.55);
   /* Radius - commons styles */
   --common-border-radius: 13px;
+  /* Buttons */
+  --btn-primary-bg-colors: linear-gradient(to right, var(--dark-text-color), #646a7e);
+  --btn-secondary-bg-colors: linear-gradient(to right, #75b2ce, #3c4e76);
 }
 
 body {
@@ -43,4 +46,8 @@ nav h4 {
   width: 20%;
   display: flex;
   flex-direction: row;
+}
+
+button:hover {
+  cursor: pointer;
 }
