Se instala react-icons & Se modifican estilos en la searchBar

--- a/app/header/header.module.css
+++ b/app/header/header.module.css
@@ -34,7 +34,7 @@
 .searchBar:focus, .searchIconButton:focus {
   outline: 0.5px solid #763c3c;
   outline-color: #3c4e76;
-  /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0 0 5px var(--dark-text-color);
 }
 
 .navigateSection {
