(wip) se agranda el textarea del contacto y se agrega padding-left a los placeholders de los inputs

--- a/app/globals.css
+++ b/app/globals.css
@@ -71,6 +71,10 @@ button:hover, input[type="submit"]:hover {
 }
 
 /* Relacionado a inputs */
+::placeholder {
+  padding-left: 7px;
+}
+
 .search-bar {
   width: 20%;
   display: flex;
