--- a/app/productos/products.module.css
+++ b/app/productos/products.module.css
@@ -21,3 +21,8 @@
   background: linear-gradient(to right, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
   pointer-events: none;
 }
+
+.categoryItem {
+  display: flex;
+  flex-direction: row;
+}
