--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -36,5 +36,21 @@
 }
 
 .productItem {
+  background: var(--card-product-details);
   margin: 0 25px 10px 25px;
+  padding: 15px; /* Añade un relleno para separar el contenido del borde */
+  border: 1px solid rgba(0, 0, 0, 0.1); /* Añade un borde con color */
+  border-top: none;
+  border-radius: 4px; /* Añade bordes redondeados */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Añade una sombra */
+  transition: box-shadow 0.3s ease; /* Agrega transición de la sombra */
+}
+
+.productItem:hover {
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Aumenta la sombra al pasar el ratón */
+}
+
+.productPrice {
+  text-align: center;
 }
