--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -56,7 +56,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Aumenta la sombra al pasar el ratón */
 }
 
-.productPrice {
+.productCardInfo {
   text-align: center;
 }
 
