--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@
   --start-navbar-color-opacity: rgb(117, 178, 206, 0.55);
   --dark-text-color: #031c26;
   /* Text */
-  --input-background: rgba(251, 249, 249, 0.55);
-  --input-background-light: rgba(251, 249, 249);
+  --input-background: rgb(251, 249, 249, 0.55);
+  --input-background-light: rgb(251, 249, 249);
   /* Radius - commons styles */
   --common-border-radius: 13px;
   /* Buttons */
@@ -17,7 +17,7 @@
   --btn-secondary-end-color: #3c4e76;
   --btn-primary-bg-colors: linear-gradient(to right, var(--dark-text-color), var(--btn-primary-end-color));
   --btn-secondary-bg-colors: linear-gradient(to right, var(--btn-secondary-start-color), var(--btn-secondary-end-color));
-  --card-product-details: rgba(251, 249, 249, 0.35);
+  --card-product-details: rgb(251, 249, 249, 0.35);
   /* Navigation */
   --section-active-end-bg: #fbe9e3;
   --section-active-bg: linear-gradient(to right, var(--btn-secondary-start-color), var(--section-active-end-bg));
