--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -49,7 +49,7 @@
   border-top: none;
   border-radius: 4px; /* Añade bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Añade una sombra */
-  transition: box-shadow 0.3s ease; /* Agrega transición de la sombra */
+  transition: 0.3s ease; /* Agrega transición de la sombra */
 }
 
 .productItem:hover {
