Se calcula el total de carrito al agregar o eliminar un producto

--- a/app/cart/cart.module.css
+++ b/app/cart/cart.module.css
@@ -1,18 +1,4 @@
-.cartSectionContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-/* Product Card */
-.detailCard {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  min-width: 70px;
-  height: 150px;
-  width: 90%;
-  align-self: center;
+.card-common-styles {
   background: var(--card-product-details);
   margin-bottom: 17px;
   padding: 15px; /* Añade un relleno para separar el contenido del borde */
@@ -21,6 +7,23 @@
   border-radius: 4px; /* Añade bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Añade una sombra */
   transition: 0.3s ease; /* Agrega transición de la sombra */
+}
+
+.cartSectionContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* Product Card */
+.detail-card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-width: 70px;
+  height: 150px;
+  width: 90%;
+  align-self: center;
 }
 
 .description-column {
@@ -35,8 +38,12 @@
 }
 
 /* Relacionado a formulario de compra */
-.formContainer {
-  width: 50%;
+.purchase-form-div-container {
+  width: 40%;
+}
+
+.cart-details {
+  width: 80%;
 }
 
 .field {
