--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,13 @@ nav img {
   width: 100px;
 }
 
+
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Relacionado a botones */
 button:hover,
 input[type="submit"]:hover {
