--- a/app/globals.css
+++ b/app/globals.css
@@ -121,6 +121,7 @@ input[type="submit"]:hover {
 }
 
 input[type=text],
+input[type=number],
 input[type=email],
 input[type=submit],
 input[type=search],
@@ -136,6 +137,7 @@ textarea {
 }
 
 input[type=text]:focus,
+input[type=number]:focus,
 input[type=email]:focus,
 input[type=submit]:focus,
 input[type=search]:focus,
