--- a/app/admin/[productSlug]/updateProduct.module.css
+++ b/app/admin/[productSlug]/updateProduct.module.css
@@ -9,6 +9,12 @@
 }
 
 .form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.div-fields-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +22,7 @@
   width: 60%;
 }
 
-.form-container textarea {
+.div-fields-container textarea {
   height: 200px;
   resize: none; 
 }
