--- a/app/globals.css
+++ b/app/globals.css
@@ -123,6 +123,7 @@ input[type="submit"]:hover {
 input[type=text],
 input[type=number],
 input[type=email],
+input[type=password],
 input[type=submit],
 input[type=search],
 textarea {
@@ -139,6 +140,7 @@ textarea {
 input[type=text]:focus,
 input[type=number]:focus,
 input[type=email]:focus,
+input[type=password]:focus,
 input[type=submit]:focus,
 input[type=search]:focus,
 textarea:focus,
